src/test/ui/type-alias-impl-trait/multiple-def-uses-in-one-fn-lifetimes.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/multiple-def-uses-in-one-fn-lifetimes.rs:5:1
   |
LL | fn foo<'x, 'y>(i: &'x i32, j: &'y i32) -> (Foo<'x, 'y>, Foo<'y, 'x>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&'a i32`, got `&'b i32`
   |
note: previous use here
  --> $DIR/multiple-def-uses-in-one-fn-lifetimes.rs:5:1
   |
LL | fn foo<'x, 'y>(i: &'x i32, j: &'y i32) -> (Foo<'x, 'y>, Foo<'y, 'x>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

